# generator-py

./: .eslintrc.js  README.md  package.json
generators/app/: index.js
generators/app/templates/: .travis.yml  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  {{dockerignore}}  {{gitignore}}
generators/app/templates/.github/workflows/: python.yml
generators/app/templates/docs/: README.md  conf.py
generators/app/templates/test/: test_{{import_name}}.py
test/: generator-py.test.js
